--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.16.7",
     "bibtex-parser": "^0.0.0",
-    "katex": "^0.13.13",
+    "mathjax-full": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-monaco-editor": "^0.44.0"
